--- a/LicentaApp/Views/Shared/Comenzi/ComandaSimpla.cshtml
+++ b/LicentaApp/Views/Shared/Comenzi/ComandaSimpla.cshtml
@@ -12,7 +12,7 @@
 
         <div class="col m16 input-field">
             @Html.EditorFor(model => model.Discount)
-            @Html.LabelFor(model => model.Discount, "Discount")
+            @Html.LabelFor(model => model.Discount, "Discount Comanda")
             @Html.ValidationMessageFor(model => model.Discount, "", new { @class = "text-danger" })
         </div>
     </div>
