--- a/LicentaApp/Views/Produse/Edit.cshtml
+++ b/LicentaApp/Views/Produse/Edit.cshtml
@@ -6,29 +6,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Produse</h4>
+        <h4>Actuealizeaza - @this.Model.Produse.Denumire</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.EditorForModel(new {Action = AppConstants.CRUD.Edit})
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+        <div class="row">
+            <div class="col m2">
+                <input type="submit" value="Salveaza" class="btn" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
