--- a/LicentaApp/Views/Shared/Comenzi/ComandaCuPrelucrare.cshtml
+++ b/LicentaApp/Views/Shared/Comenzi/ComandaCuPrelucrare.cshtml
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col m12 input-field">
                         @Html.EditorFor(model => model.Discount)
-                        @Html.LabelFor(model => model.Discount, "Discount Rama")
+                        @Html.LabelFor(model => model.Discount, "Discount Comanda")
                         @Html.ValidationMessageFor(model => model.Discount, "", new { @class = "text-danger" })
                     </div>
                 </div>
