--- a/LicentaApp/Views/Comenzi/Index.cshtml
+++ b/LicentaApp/Views/Comenzi/Index.cshtml
@@ -48,7 +48,7 @@
             </td>
             <td>
 
-                <a href="@Url.Action("Details", "Comenzi", new { id=item.NumarComanda })" class="tooltipped" data-position="bottom" data-tooltip="Detalii"><i class="fas fa-info fa-2x"></i></a>
+                <a href="@Url.Action("Details", "Comenzi", new { id=item.NumarComanda })" class="tooltipped icon-button view-icon" data-position="bottom" data-tooltip="Detalii"><i class="fas fa-info fa-2x"></i></a>
             </td>
         </tr>
     }
