--- a/LicentaApp/Views/Shared/Comenzi/ComandaCuPrelucrare.cshtml
+++ b/LicentaApp/Views/Shared/Comenzi/ComandaCuPrelucrare.cshtml
@@ -42,7 +42,7 @@
 
 
     <div class="col s1"></div>
-    <div class="col s6 card-panel" style="display:none" id="lentile-card">
+    <div class="col s6 card-panel" id="lentile-card">
         <div id="tip-lentila-options-container">
             @Html.Partial("Comenzi/TipLentilaOptions", this.Model)
         </div>
