--- a/LicentaApp/Views/Shared/Comenzi/Modals/VizitaMedicala.cshtml
+++ b/LicentaApp/Views/Shared/Comenzi/Modals/VizitaMedicala.cshtml
@@ -1,7 +1,7 @@
 ﻿@using LicentaApp.Domain
 @model LicentaApp.ViewModels.ComandaViewModel
 
-<!-- Modal Trigger -->
+@*<!-- Modal Trigger -->
 <a class="waves-effect waves-light btn modal-trigger" href="#modal-vizita-medicala">Adauga Date</a>
 
 <div id="vizita-medicala-info">
@@ -30,4 +30,4 @@
     @*<div class="modal-footer">
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Actualizeaza</a>
         </div>*@
-</div>
+</div>*@
