--- a/LicentaApp/Views/ComenziAprovizionare/ComenziAprovizionareFurnizori.cshtml
+++ b/LicentaApp/Views/ComenziAprovizionare/ComenziAprovizionareFurnizori.cshtml
@@ -1,8 +1,55 @@
-﻿
+﻿@model IEnumerable<LicentaApp.ViewModels.ComandaAprovizionare.ComandaAprovizionareReadAllViewModel>
 @{
     ViewBag.Title = "ComenziAprovizionareFurnizori";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_PagedLayout.cshtml";
 }
 
-<h2>ComenziAprovizionareFurnizori</h2>
 
+<div class="row">
+    <div class="col s11">
+        <h3>Comenzi</h3>
+    </div>
+    <div class="col s1">
+        @Html.Partial("_FloatingButton", new Tuple<string, string>(Url.Action("CreazaComandaAprovizionareFurnizor", "ComenziAprovizionare"), "Adauga"))
+    </div>
+</div>
+
+<table>
+    <tr>
+        <th>
+            Numar comanda
+        </th>
+        <th>
+            Expeditor
+        </th>
+        <th>
+            Destinatar
+        </th>
+        <th>
+            Data
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumarComanda)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Expeditor)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Destinatar)
+            </td>
+            <td>
+                @item.DataCreare.ToString("dd/MM/yyyy")
+            </td>
+            <td>
+                <a href="@Url.Action("VizualizeazaComanda", "ComenziAprovizionare", new { id=item.NumarComanda })" class="tooltipped icon-button view-icon" data-position="bottom" data-tooltip="Detalii"><i class="fas fa-info fa-2x"></i></a>
+            </td>
+        </tr>
+    }
+
+</table>
