--- a/LicentaApp/Views/Home/Admin.cshtml
+++ b/LicentaApp/Views/Home/Admin.cshtml
@@ -7,17 +7,45 @@
 <h2>Admin</h2>
 
 <div class="row">
-    <a href="@Url.Action("Index","Utilizatori")" class="waves-effect waves-light btn-large">Utilizatori</a>
+    <div class="col s12 m3">
+        <div class="card setting-card">
+            <div class="card-image">
+                <img src="../../Bundles/Content/Images/network.png">
+                <span class="card-title">Utilizatori</span>
+                <a href="@Url.Action("Index","Utilizatori")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m3">
+        <div class="card setting-card">
+            <div class="card-image">
+                <img src="../../Bundles/Content/Images/online-store.png">
+                <span class="card-title">Magazine</span>
+                <a href="@Url.Action("Index","Magazine")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m3">
+        <div class="card setting-card">
+            <div class="card-image">
+                <img src="../../Bundles/Content/Images/delivery-truck.png">
+                <span class="card-title">Furnizori</span>
+                <a href="@Url.Action("Index","Furnizori")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m3">
+        <div class="card setting-card">
+            <div class="card-image">
+                <img src="../../Bundles/Content/Images/inventory.png">
+                <span class="card-title">Inventar</span>
+                <a href="@Url.Action("Index","Inventar")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            </div>
+        </div>
+    </div>
 </div>
+
 <div class="row">
-    <a href="@Url.Action("Index","Furnizori")" class="waves-effect waves-light btn-large">Furnizori</a>
+   
 </div>
-<div class="row">
-    <a href="@Url.Action("Index","Magazine")" class="waves-effect waves-light btn-large">Magazine</a>
-</div>
-<div class="row">
-    <a href="@Url.Action("Index","Produse")" class="waves-effect waves-light btn-large">Produse</a>
-</div>
-<div class="row">
-    <a href="@Url.Action("Index","Inventar")" class="waves-effect waves-light btn-large">Inventar</a>
-</div>
+
