--- a/LicentaApp/Bundles/Content/Custom/Site.css
+++ b/LicentaApp/Bundles/Content/Custom/Site.css
@@ -202,3 +202,18 @@
     transition: color 0.5s;
     color: #3491d7;
 }
+
+.setting-card .card-image > img {
+    padding: 10px;
+}
+
+.setting-card .card-image .card-title {
+    Width: 100%;
+    background-color: #4e4e4f;
+    opacity: 0.7;
+    padding: 5px 5px 5px 15px;
+}
+
+.setting-card .btn-floating.halfway-fab {
+    bottom: 24px;
+}
